# Image-Editor

./: CMakeCache.txt  CMakeLists.txt  Image-Editor  Image-Editor_en_ZA.ts  LayerWidget.ui  Makefile  cmake_install.cmake  erosionDilatation.cpp  figurecontainer.cpp  figurecontainer.h  figurecontainer.ui  figurecontent.cpp  figurecontent.h  figureframe.cpp  figureframe.h  figureframe.ui  headerbar.cpp  headerbar.h  headerbar.ui  layerwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  panorama.cpp  res.qrc  toolswidget.cpp  toolswidget.h  toolswidget.ui
Classes/: ImageTransformer.cpp  ImageTransformer.h
Classes/HistoryManager/: HistoryManager.cpp  HistoryManager.h
Classes/ImageTransformer/: ImageTransformer.cpp  ImageTransformer.h
Classes/LayerManager/: LayerManager.cpp  layermanager.h
Popups/CannyPopup/: cannypopup.cpp  cannypopup.h
Popups/ErodePopup/: erodepopup.cpp  erodepopup.h
Popups/LightenPopup/: lightenpopup.cpp  lightenpopup.h  lightenpopup.ui
Popups/ResizePopup/: resizepopup.cpp  resizepopup.h  resizepopup.ui
Widgets/AboutDialog/: aboutdialog.cpp  aboutdialog.ui
Widgets/FigureContainer/: figurecontainer.cpp  figurecontainer.h  figurecontainer.ui
Widgets/FigureContent/: figurecontent.cpp  figurecontent.h
Widgets/FigureFrame/: figureframe.cpp
Widgets/HelpDialog/: helpdialog.cpp  helpdialog.h  helpdialog.ui
Widgets/LayerWidget/: LayerWidget.ui  layerwidget.cpp
Widgets/LayerWidget/Item/: layeritemwidget.cpp  layeritemwidget.h  layeritemwidget.ui
Widgets/LeftInterface/: leftinterface.cpp  leftinterface.h  leftinterface.ui
Widgets/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Widgets/Popups/CannyPopup/: cannypopup.ui
Widgets/Popups/ErodePopup/: erodepopup.ui
Widgets/Popups/LightenPopup/: lightenpopup.ui
Widgets/Popups/ResizePopup/: resizepopup.ui
Widgets/ToolWidget/: toolswidget.cpp  toolswidget.h  toolswidget.ui  toolswidget.ui.autosave
cmake-modules/: FindOpenCV.cmake
ressources/faceDetection/recognizer/: trained_recognizer.yml
